kubernetes/core/metrics-server/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: metrics-server
  namespace: metrics-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: metrics-server-metrics-server
      app.kubernetes.io/name: metrics-server
  egress:
    - toServices:
        - k8sService:
            namespace: default
            serviceName: kubernetes
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEntities:
        - host
        - kube-apiserver
        - remote-node
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
            - port: "10250"
              protocol: TCP
  ingress:
    - fromEntities:
        - host
        - remote-node
        - kube-apiserver
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: prometheus
            k8s:io.kubernetes.pod.namespace: prometheus
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-firewall-metrics-server
spec:
  nodeSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: metrics-server-metrics-server
            app.kubernetes.io/name: metrics-server
            k8s:io.kubernetes.pod.namespace: metrics-server
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
